tests/valid/definite/SetEmpty_Valid_1.whiley
void f({int} xs):
    print str(xs)

void System::main([string] args):
    f({1,4})
    f({})
    f(∅)
