tests/invalid/simple/MethodCall_CompileFail_3.whiley
void System::main([string] this):
    this->f(1)
